--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                         <div class="app-name">10k Followers</div>
                                         <p class="app-version" style="font-size: 10px">ANDROID And IOS</p>
                                     </div>
-                                    <a  onclick="install('https://i.imgur.com/7jMMRIe.jpg', '10k Followers','78b5311')" class="btn btn-success btn-xs btn-install">
+                                    <a  onclick="install('https://i.imgur.com/if4FPyG.jpg', '10k Followers','78b5311')" class="btn btn-success btn-xs btn-install">
                                         <span class="install-btn-text"><b>GET FOLLOWERS</b></span>
                                     </a>
                                     <div class="clearfix"></div>
@@ -64,12 +64,12 @@
                             </div>
                                                     <div class="col-md-12 app-list-md">
                                 <div class="app-box">
-                                    <img class="img-responsive ios-icon app-icon" src="https://i.imgur.com/7jMMRIe.jpg">
+                                    <img class="img-responsive ios-icon app-icon" src="https://i.imgur.com/if4FPyG.jpg">
                                     <div class="app-info">
                                         <div class="app-name">25k Followers</div>
                                         <p class="app-version" style="font-size: 10px">ANDROID And IOS</p>
                                     </div>
-                                    <a  onclick="install('https://i.imgur.com/7jMMRIe.jpg', '25k Followers','e964740')" class="btn btn-success btn-xs btn-install">
+                                    <a  onclick="install('https://i.imgur.com/if4FPyG.jpg', '25k Followers','e964740')" class="btn btn-success btn-xs btn-install">
                                         <span class="install-btn-text"><b>GET FOLLOWERS</b></span>
                                     </a>
                                     <div class="clearfix"></div>
@@ -77,7 +77,7 @@
                             </div>
                             <div class="col-md-12 app-list-md">
                                 <div class="app-box">
-                                    <img class="img-responsive ios-icon app-icon" src="https://i.imgur.com/7jMMRIe.jpg">
+                                    <img class="img-responsive ios-icon app-icon" src="https://i.imgur.com/if4FPyG.jpg">
                                     <div class="app-info">
                                         <div class="app-name">50k Followers</div>
                                         <p class="app-version" style="font-size: 10px">ANDROID And IOS</p>
@@ -90,12 +90,12 @@
                             </div>
                             <div class="col-md-12 app-list-md">
                                 <div class="app-box">
-                                    <img class="img-responsive ios-icon app-icon" src="https://i.imgur.com/7jMMRIe.jpg">
+                                    <img class="img-responsive ios-icon app-icon" src="https://i.imgur.com/if4FPyG.jpg">
                                     <div class="app-info">
                                         <div class="app-name">100k Followers</div>
                                         <p class="app-version" style="font-size: 10px">ANDROID And IOS</p>
                                     </div>
-                                    <a  onclick="install('https://i.imgur.com/7jMMRIe.jpg', '100k Followers','78b5311')" class="btn btn-success btn-xs btn-install">
+                                    <a  onclick="install('https://i.imgur.com/if4FPyG.jpg', '100k Followers','78b5311')" class="btn btn-success btn-xs btn-install">
                                         <span class="install-btn-text"><b>GET FOLLOWERS</b></span>
                                     </a>
                                     <div class="clearfix"></div>
@@ -103,12 +103,12 @@
                             </div>
                             <div class="col-md-12 app-list-md">
                                 <div class="app-box">
-                                    <img class="img-responsive ios-icon app-icon" src="https://i.imgur.com/7jMMRIe.jpg">
+                                    <img class="img-responsive ios-icon app-icon" src="https://i.imgur.com/if4FPyG.jpg">
                                     <div class="app-info">
                                         <div class="app-name"> 200k Followers </div>
                                         <p class="app-version" style="font-size: 10px">ANDROID And IOS</p>
                                     </div>
-                                    <a  onclick="install('https://i.imgur.com/7jMMRIe.jpg', '200k Followers','78b5311')" class="btn btn-success btn-xs btn-install">
+                                    <a  onclick="install('https://i.imgur.com/if4FPyG.jpg', '200k Followers','78b5311')" class="btn btn-success btn-xs btn-install">
                                         <span class="install-btn-text"><b>GET FOLLOWERS</b></span>
                                     </a>
                                     <div class="clearfix"></div>
