--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
                         <div class="col-md-12 app-list-md">
                                 <div class="app-box">
-                                    <img class="img-responsive ios-icon app-icon" src="https://i.imgur.com/7jMMRIe.jpg">
+                                    <img class="img-responsive ios-icon app-icon" src="https://i.imgur.com/if4FPyG.jpg">
                                     <div class="app-info">
                                         <div class="app-name">1000 followers</div>
                                         <p class="app-version" style="font-size: 10px">ANDROID And IOS</p>
@@ -51,7 +51,7 @@
                             </div>
                             <div class="col-md-12 app-list-md">
                                 <div class="app-box">
-                                    <img class="img-responsive ios-icon app-icon" src="https://i.imgur.com/7jMMRIe.jpg">
+                                    <img class="img-responsive ios-icon app-icon" src="https://i.imgur.com/if4FPyG.jpg">
                                     <div class="app-info">
                                         <div class="app-name">10k Followers</div>
                                         <p class="app-version" style="font-size: 10px">ANDROID And IOS</p>
