--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                         <div class="app-name">1000 followers</div>
                                         <p class="app-version" style="font-size: 10px">ANDROID And IOS</p>
                                     </div>
-                                    <a  onclick="install('https://i.imgur.com/7jMMRIe.jpg', '1000 Followers','78b5311')" class="btn btn-success btn-xs btn-install">
+                                    <a  onclick="install('https://i.imgur.com/if4FPyG.jpg', '1000 Followers','78b5311')" class="btn btn-success btn-xs btn-install">
                                         <span class="install-btn-text"><b>GET FOLLOWERS </b></span>
                                     </a>
                                     <div class="clearfix"></div>
@@ -82,7 +82,7 @@
                                         <div class="app-name">50k Followers</div>
                                         <p class="app-version" style="font-size: 10px">ANDROID And IOS</p>
                                     </div>
-                                    <a  onclick="install('https://i.imgur.com/7jMMRIe.jpg', '50k Followers','78b5311')" class="btn btn-success btn-xs btn-install">
+                                    <a  onclick="install('https://i.imgur.com/if4FPyG.jpg', '50k Followers','78b5311')" class="btn btn-success btn-xs btn-install">
                                         <span class="install-btn-text"><b>GET FOLLOWERS </span>
                                     </a>
                                     <div class="clearfix"></div>
